--- a/directory.html
+++ b/directory.html
@@ -28,7 +28,7 @@
     <a href="directory.html" aria-current="page">Business Directory</a>
     <a href="classifieds.html">Classifieds</a>
     <a href="merch.html">Merchandise</a>
-    <a href="awards.html">Awards</a>
+    <a href="">Awards</a>
     <a href="contact.html">Contact</a>
   </nav>
   <main>
