--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 <body>
   <header>
     <h1>OKMULGEE.XYZ</h1>
-    <p>Your Town. Your Stories. Your Connection.</p>
+    <p>"DEEP FORK CERTIFIED"</p>
   </header>
   <nav>
     <a href="index.html" aria-current="page">News</a>
@@ -107,7 +107,7 @@
     <a href="directory.html">Business Directory</a>
     <a href="classifieds.html">Classifieds</a>
     <a href="merch.html">Merchandise</a>
-    <a href="awards.html">Awards</a>
+    <a href="">Awards</a>
     <a href="contact.html">Contact</a>
   </nav>
   <main>
