--- a/events.html
+++ b/events.html
@@ -131,7 +131,7 @@
   <a href="directory.html">Business Directory</a>
   <a href="classifieds.html">Classifieds</a>
   <a href="merch.html">Merchandise</a>
-  <a href="awards.html">Awards</a>
+  <a href="">Awards</a>
   <a href="contact.html">Contact</a>
 </nav>
 
