--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     @media (max-width: 600px) {
       nav {
         flex-direction: column;
-        align-items: stretch;
+        gap: 0.5rem;
       }
       nav a {
         display: block;
