--- a/index.html
+++ b/index.html
@@ -2,114 +2,145 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Okmulgee.xyz</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>Events — Okmulgee.xyz</title>
   <style>
-    /* River & Sky Color Theme with Responsive Fixes */
-    *, *::before, *::after {
-      box-sizing: border-box;
-    }
-    html, body {
-      margin: 0;
-      padding: 0;
-      width: 100%;
-      overflow-x: hidden;
-    }
     body {
       font-family: Arial, sans-serif;
-      background-color: #8FCFD1; /* Sky Blue backdrop */
-      color: #323232; /* Charcoal text */
-      display: flex;
-      flex-direction: column;
-      min-height: 100vh;
+      margin: 0; padding: 0;
+      background: #8FCFD1; /* your blue background */
+      color: #000; /* black text for readability */
     }
     header {
-      background-color: #0F5F67; /* Deep Teal */
-      color: #E8D2A6; /* Sandstone text */
+      background-color: #0F5F67; /* dark teal */
+      color: #E8D2A6; /* light cream */
       padding: 1rem;
       text-align: center;
     }
     nav {
-      background-color: #F2994A; /* Sunset Orange */
-      padding: 0.5rem;
+      background-color: #F2994A; /* warm orange */
       display: flex;
       justify-content: center;
       gap: 1rem;
       flex-wrap: wrap;
+      padding: 0.5rem;
     }
     nav a {
-      color: #E8D2A6; /* Sandstone links */
+      color: #E8D2A6; /* cream */
       text-decoration: none;
       font-weight: bold;
-      padding: 0.3rem 0.6rem;
+      padding: 0.5rem 1rem;
       border-radius: 4px;
       transition: background-color 0.3s ease;
     }
     nav a:hover {
-      background-color: #0F5F67; /* Deep Teal hover */
+      background: #0F5F67;
     }
     nav a[aria-current="page"] {
       background: #0F5F67;
     }
     main {
-      background-color: #E8D2A6; /* Sandstone content bg */
-      color: #323232;
+      max-width: 900px;
+      margin: 2rem auto;
+      background: #fff;
       padding: 2rem;
-      margin: 1rem auto;
-      width: 95%;
-      max-width: 1200px;
-      box-shadow: 0 2px 5px rgba(0, 0, 0, 0.05);
       border-radius: 6px;
-      flex-grow: 1;
+      box-shadow: 0 0 10px rgba(0,0,0,0.1);
+      color: #000;
     }
     footer {
       background-color: #0F5F67; /* Deep Teal */
       color: #E8D2A6;
       text-align: center;
       padding: 1rem;
-      margin-top: auto;
+      margin-top: auto
+    }
+    h1, h2 {
+      margin-top: 0;
+      color: #0F5F67;
+    }
+    section#pricing {
+      background: #fff8f2;
+      padding: 1rem 1.5rem;
+      border-radius: 6px;
+      margin-bottom: 2rem;
+      border: 1px solid #f2c96d;
+    }
+    table {
+      width: 100%;
+      border-collapse: collapse;
+      margin-top: 0.5rem;
+    }
+    th, td {
+      text-align: left;
+      padding: 0.5rem;
+      border-bottom: 1px solid #ddd;
+    }
+    .event-listing {
+      list-style: none;
+      padding: 0;
+      margin: 0;
+    }
+    .event-listing li {
+      background: #fff8f2;
+      margin-bottom: 1rem;
+      padding: 1rem;
+      border-radius: 6px;
+      border-left: 6px solid transparent;
+      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
+    }
+    /* Featured highlight */
+    .event-listing li.featured {
+      border-left-color: #F2994A;
+      background: #fff3d6;
+    }
+    .event-title {
+      font-weight: bold;
+      font-size: 1.1rem;
+      margin: 0 0 0.3rem 0;
+      color: #0F5F67;
+    }
+    .event-date {
+      font-style: italic;
+      color: #666;
+      margin-bottom: 0.5rem;
+    }
+    .event-details {
+      margin: 0;
+    }
+    .note {
+      font-size: 0.9rem;
+      color: #555;
+      margin-top: 0.5rem;
     }
     @media (max-width: 600px) {
       nav {
         flex-direction: column;
         gap: 0.5rem;
       }
-      nav a {
-        display: block;
-        width: 100%;
-        text-align: center;
-        padding: 0.75rem;
-        margin: 0.25rem 0;
-      }
-      header h1 {
-        font-size: 1.5rem;
-      }
-      header p {
-        font-size: 1rem;
-      }
       main {
-        width: 100%;
-        margin: 0.5rem auto;
+        margin: 1rem;
         padding: 1rem;
       }
     }
   </style>
 </head>
 <body>
-  <header>
-    <h1>OKMULGEE.XYZ</h1>
-    <p>"DEEP FORK CERTIFIED"</p>
-  </header>
-  <nav>
-    <a href="index.html" aria-current="page">News</a>
-    <a href="events.html">Events</a>
-    <a href="lists.html">Lists</a>
-    <a href="directory.html">Business Directory</a>
-    <a href="classifieds.html">Classifieds</a>
-    <a href="merch.html">Merchandise</a>
-    <a href="">Awards</a>
-    <a href="contact.html">Contact</a>
-  </nav>
+
+<header>
+  <h1>OKMULGEE.XYZ</h1>
+</header>
+
+<nav>
+  <a href="index.html">News</a>
+  <a href="events.html" aria-current="page">Events</a>
+  <a href="lists.html">Lists</a>
+  <a href="directory.html">Business Directory</a>
+  <a href="classifieds.html">Classifieds</a>
+  <a href="merch.html">Merchandise</a>
+  <a href="">Awards</a>
+  <a href="contact.html">Contact</a>
+</nav>
   <main>
     <h2>Welcome to Okmulgee.xyz</h2>
     <p>Explore local news, events, businesses, and more in and around Okmulgee County.</p>
