--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     }
     h1, h2 {
       margin-top: 0;
-      color: #0F5F67;
+      color: #E8D2A6;
     }
     section#pricing {
       background: #fff8f2;
@@ -132,8 +132,8 @@
 </header>
 
 <nav>
-  <a href="index.html">News</a>
-  <a href="events.html" aria-current="page">Events</a>
+  <a href="index.html" aria-current="page">News</a>
+  <a href="events.html">Events</a>
   <a href="lists.html">Lists</a>
   <a href="directory.html">Business Directory</a>
   <a href="classifieds.html">Classifieds</a>
