--- a/index.html
+++ b/index.html
@@ -1,128 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <title>Events — Okmulgee.xyz</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Contact Us — Okmulgee.xyz</title>
   <style>
-    body {
-      font-family: Arial, sans-serif;
-      margin: 0; padding: 0;
-      background: #8FCFD1; /* your blue background */
-      color: #000; /* black text for readability */
-    }
-    header {
-      background-color: #0F5F67; /* dark teal */
-      color: #E8D2A6; /* light cream */
-      padding: 1rem;
-      text-align: center;
-    }
-    nav {
-      background-color: #F2994A; /* warm orange */
-      display: flex;
-      justify-content: center;
-      gap: 1rem;
-      flex-wrap: wrap;
-      padding: 0.5rem;
-    }
-    nav a {
-      color: #E8D2A6; /* cream */
-      text-decoration: none;
-      font-weight: bold;
-      padding: 0.5rem 1rem;
-      border-radius: 4px;
-      transition: background-color 0.3s ease;
-    }
-    nav a:hover {
-      background: #0F5F67;
-    }
-    nav a[aria-current="page"] {
-      background: #0F5F67;
-    }
-    main {
-      max-width: 900px;
-      margin: 2rem auto;
-      background: #fff;
-      padding: 2rem;
-      border-radius: 6px;
-      box-shadow: 0 0 10px rgba(0,0,0,0.1);
-      color: #000;
-    }
-    footer {
-      background-color: #0F5F67; /* Deep Teal */
-      color: #E8D2A6;
-      text-align: center;
-      padding: 1rem;
-      margin-top: auto
-    }
-    h1, h2 {
-      margin-top: 0;
-      color: #E8D2A6;
-    }
-    section#pricing {
-      background: #fff8f2;
-      padding: 1rem 1.5rem;
-      border-radius: 6px;
-      margin-bottom: 2rem;
-      border: 1px solid #f2c96d;
-    }
-    table {
-      width: 100%;
-      border-collapse: collapse;
-      margin-top: 0.5rem;
-    }
-    th, td {
-      text-align: left;
-      padding: 0.5rem;
-      border-bottom: 1px solid #ddd;
-    }
-    .event-listing {
-      list-style: none;
-      padding: 0;
-      margin: 0;
-    }
-    .event-listing li {
-      background: #fff8f2;
-      margin-bottom: 1rem;
-      padding: 1rem;
-      border-radius: 6px;
-      border-left: 6px solid transparent;
-      box-shadow: 0 2px 5px rgba(0,0,0,0.05);
-    }
-    /* Featured highlight */
-    .event-listing li.featured {
-      border-left-color: #F2994A;
-      background: #fff3d6;
-    }
-    .event-title {
-      font-weight: bold;
-      font-size: 1.1rem;
-      margin: 0 0 0.3rem 0;
-      color: #0F5F67;
-    }
-    .event-date {
-      font-style: italic;
-      color: #666;
-      margin-bottom: 0.5rem;
-    }
-    .event-details {
-      margin: 0;
-    }
-    .note {
-      font-size: 0.9rem;
-      color: #555;
-      margin-top: 0.5rem;
-    }
-    @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        gap: 0.5rem;
-      }
-      main {
-        margin: 1rem;
-        padding: 1rem;
-      }
-    }
+    body { font-family: Arial, sans-serif; margin: 0; padding: 0; background: #8FCFD1; color: #323232; }
+    header { background-color: #0F5F67; color: #E8D2A6; text-align: center; padding: 1rem; }
+    footer { text-align: center; padding: 1rem; background-color: #0F5F67; color: #E8D2A6; font-size: 0.9rem; margin-top: 2rem; }
+    nav { background: #F2994A; display: flex; justify-content: center; gap: 1rem; flex-wrap: wrap; padding: 0.5rem; }
+    nav a { color: #E8D2A6; text-decoration: none; font-weight: bold; padding: 0.5rem; border-radius: 4px; }
+    nav a:hover { background: #0F5F67; }
+    nav a[aria-current="page"] { background: #0F5F67; }
+    main { max-width: 800px; margin: 2rem auto; background: #E8D2A6; padding: 2rem; border-radius: 6px; }
   </style>
 </head>
 <body>
