--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     nav a { color: #E8D2A6; text-decoration: none; font-weight: bold; padding: 0.5rem; border-radius: 4px; }
     nav a:hover { background: #0F5F67; }
     nav a[aria-current="page"] { background: #0F5F67; }
-    main { max-width: 800px; margin: 2rem auto; background: #E8D2A6; padding: 2rem; border-radius: 6px; }
+    main { max-width: 700px; margin: 2rem auto; background: #fff; padding: 2rem; border-radius: 6px; }
   </style>
 </head>
 <body>
